src/styles/style.scss
* {
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Lato', sans-serif;
  font-size: 16px;
  color: #272635;
  font-weight: 400;
}

h2 {
  color: #515267;
  font-weight: 700;
  font-size: 22px;
  margin: 15px 0 5px 0;
}

  .page-container {
    max-width: 830px;

    &-wrapper {
      display: flex;
      justify-content: space-around;
    }
  }

.nav {
  background-color: #272635;
  width: 100vw;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  z-index: 3;
  padding: 0 15px;
}

.nav-wrapper {
  padding: 0 15px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-menu {
  height: 25px;
  width: auto;
}

.nav-logo{
  height: 30px;
}

.nav-menu img,
.nav-logo img  {
  height: 100%;
  width: auto;
}


.nav-menu {
  display: flex;
  flex-direction: column;
  position: fixed;
  list-style: none;
  top: -110%;
  left: 0;
  align-items: flex-end;
  padding: 10px 20px 20px 0;
  width: 100%;
  height: auto;
  background-color: #272635;
  z-index: 2;
  transition: all 0.55s ease-in-out;
  box-shadow: 1px 3px 7px rgba(24, 31, 37, 0.3);
  max-height: 90vh;
  overflow-y: scroll;
  overflow-x: hidden;
}
.nav-menu.active {
  top: 40px;
}
.nav-item {
  margin: 7px 0;
  width: 270px;
}
.nav-menu a {
  color: #DEFFFC;
  font-size: 14px;
  text-decoration: none;
}

.hamburger {
  /*hamburger menu*/
  cursor: pointer;
  z-index: 3;
}
.bar {
  display: block;
  width: 25px;
  height: 3px;
  background-color: #DEFFFC ;
  margin: 5px 0;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}
.hamburger.active .bar:nth-child(2) {
  opacity: 0;
}
.hamburger.active .bar:nth-child(1) {
  transform: translateY(8px) rotate(45deg);
}
.hamburger.active .bar:nth-child(3) {
  transform: translateY(-8px) rotate(-45deg);
}

.sort-items {
  background-color: #DEFFFC;
  border-radius: 3px;
  width: 175px;
  padding: 5px 10px;
  color: #272635;
  border: 1px solid #7E7F9A;
  font-weight: 500;
  font-size: 16px;

  &_container {
    margin-top: 30px;
    width: 100%;
    display: flex;
    justify-content: flex-end;
    padding-right: 35px;
  }
}

.hp-background-img,
.lp-background-img {
  height: 100%;
  width: 100%;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 10px;
}

.lp-background-img {
  border-radius: 0;
  height: 350px;
}

@media screen and (min-width: 700px) {
  .lp-background-img {
    height: 570px;
  }
}

.ab-top-section {
  padding-top: 40px;
}

